# ising-model

./: .gitignore  Node.h  aws-setup.sh  lattice.h  main.cpp  makefile  observables.h  simulation.proto  test.cpp
analysis/: .gitignore  diagrams-sphere.nb  laplacian-sphere.nb  make-summary-tables.py  make_file_metadata_table.py  make_metadata_table.py  make_summary_tables.py  run.py  serialization.py  tasks-ref.yaml  tasks.txt  tasks.yaml  udh.py  utils.py
ising_model/: format  plot.py  udh.py  udh_pb2.py
ising_model/scripts/: compute-aggregate-observables.py  compute-autocorrelation.py  file-groups.json  job_manager.py  update-file-groups.py
momentum-sums/: analysis.nb  makefile  regulated_sum.cc
paper/: .gitignore  paper.tex
src/: .bazelrc  .gitignore  BUILD  CMakeLists.txt  Int8Spin.h  Node.h  Queue.h  UdSpin.h  UdhSpin.h  UpDownHoleSpin.h  UpDownSpin.h  WORKSPACE  chebyshev.h  chebyshev_test.cpp  chi_squared_distribution.h  compute-autocorrelation.py  compute_aggregate_observables.cpp  compute_autocorrelation.cpp  compute_autocorrelation.h  compute_autocorrelation_test.cpp  compute_distribution_p_value.h  compute_integral.cpp  compute_phase_diagram.cpp  compute_phase_diagram.h  compute_timing.h  cross_validate.h  distributions.h  eigen_expect_near.h  error_format.h  error_format_test.cpp  format  integral.cpp  job_manager.py  lattice.h  main.cpp  makefile  mock_clock.cpp  mock_clock.h  mock_file_system.h  next_configuration.h  (+42 more)
